# NexusContext

./: .gitignore  Cargo.toml  INSTALL.md  LICENSE  README.md  change_proposal.md  change_proposal_freshness.md
.github/workflows/: ci.yml  pages.yml  release.yml
crates/nexus-cli/: Cargo.toml
crates/nexus-cli/src/: install.rs  main.rs
crates/nexus-core/: Cargo.toml
crates/nexus-core/src/: config.rs  error.rs  lib.rs  paths.rs  registry.rs  stats.rs
crates/nexus-gui/: Cargo.toml
crates/nexus-gui/src/: architecture.rs  client.rs  config.rs  dashboard.rs  logs.rs  main.rs  project_picker.rs  projects.rs  search.rs  usage.rs  visualize.rs
crates/nexus-index/: Cargo.toml
crates/nexus-index/src/: cypher.rs  docs.rs  embeddings.rs  graph.rs  ingest.rs  language.rs  lib.rs  obsidian.rs  project.rs  queries.rs
crates/nexusd/: Cargo.toml
crates/nexusd/src/: cache.rs  control.rs  main.rs  mcp.rs  tools.rs  watcher.rs
docs/: CNAME  index.html
extension/nexuscontext@nexuscontext.local/: extension.js  metadata.json
packaging/: nexuscontext-gui.desktop
packaging/flatpak/: README.md  org.nexuscontext.Manager.desktop  org.nexuscontext.Manager.json
packaging/systemd/: nexuscontext.service
