[workspace]
resolver = "2"
members = [
    "crates/nexus-core",
    "crates/nexus-index",
    "crates/nexusd",
    "crates/nexus-cli",
    "crates/nexus-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/shayne/nexuscontext"

[workspace.dependencies]
nexus-core = { path = "crates/nexus-core" }
nexus-index = { path = "crates/nexus-index" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "io-util", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
directories = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
ignore = "0.4"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
streaming-iterator = "0.1"
gtk4 = { version = "0.11", features = ["v4_12"] }
libadwaita = { version = "0.9", features = ["v1_9"] }
