[workspace]
resolver = "2"
members = [
    "crates/nexus-core",
    "crates/nexus-index",
    "crates/nexusd",
    "crates/nexus-cli",
    "crates/nexus-gui",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/devNalyx/NexusContext"

[workspace.dependencies]
nexus-core = { path = "crates/nexus-core" }
nexus-index = { path = "crates/nexus-index" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Pinned to the 2.x line deliberately: 3.x reworked the Agent/timeout API
# non-trivially. Defaults to rustls, so no system OpenSSL dependency is
# introduced for the embeddings HTTP client.
ureq = { version = "2", features = ["json"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
directories = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
ignore = "0.4"
tree-sitter = "0.26"
tree-sitter-tags = "0.26"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
zstd = "0.13"
notify-debouncer-mini = "0.7"
regex = "1"
gtk4 = { version = "0.11", features = ["v4_12"] }
libadwaita = { version = "0.9", features = ["v1_5"] }
