[package]
name = "nexus-index"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nexus-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
rusqlite.workspace = true
ignore.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
streaming-iterator.workspace = true
zstd.workspace = true
