[package]
name = "nexusd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NexusContext daemon: MCP server, knowledge-graph indexing, and control API for local codebase intelligence."

[package.metadata.deb]
name = "nexuscontext"
maintainer = "NexusContext contributors"
copyright = "2026, NexusContext contributors"
section = "devel"
priority = "optional"
extended-description = """\
Self-hosted daemon providing a standardized MCP interface for local \
codebase indexing, knowledge-graph-based code intelligence (structural \
search, call tracing, architecture summaries), and optional semantic \
search. Ships the nexusd daemon, the nexus CLI, and the NexusContext \
Manager GUI together."""
assets = [
    ["../../target/release/nexusd", "usr/bin/", "755"],
    ["../../target/release/nexus", "usr/bin/", "755"],
    ["../../target/release/nexuscontext-gui", "usr/bin/", "755"],
    ["../../packaging/systemd/nexuscontext.service", "usr/lib/systemd/user/", "644"],
    ["../../packaging/nexuscontext-gui.desktop", "usr/share/applications/", "644"],
    ["../../README.md", "usr/share/doc/nexuscontext/README.md", "644"],
]
# Depends declares the actual libs the linked GTK4/libadwaita binary needs;
# $auto alone only inspects nexusd's own linkage, not nexus-gui's.
depends = "$auto, libgtk-4-1, libadwaita-1-0"
# The GUI's call-graph visualization shells out to `dot` - optional and
# best-effort (the app works fully without it, reporting a clear error if
# attempted), so this is a Recommends, not a hard Depends.
recommends = "graphviz"

# cargo-generate-rpm has no $auto equivalent to cargo-deb's dependency
# auto-detection - these package names are Fedora/RHEL-family naming
# (verified against Fedora's actual gtk4/libadwaita package names); a
# distro using different naming (e.g. openSUSE) would need this adjusted.
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/nexusd", dest = "/usr/bin/nexusd", mode = "755" },
    { source = "target/release/nexus", dest = "/usr/bin/nexus", mode = "755" },
    { source = "target/release/nexuscontext-gui", dest = "/usr/bin/nexuscontext-gui", mode = "755" },
    { source = "packaging/systemd/nexuscontext.service", dest = "/usr/lib/systemd/user/nexuscontext.service", mode = "644" },
    { source = "packaging/nexuscontext-gui.desktop", dest = "/usr/share/applications/nexuscontext-gui.desktop", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/nexuscontext/README.md", mode = "644" },
]

[package.metadata.generate-rpm.requires]
gtk4 = "*"
libadwaita = "*"

[package.metadata.generate-rpm.recommends]
graphviz = "*"

[dependencies]
nexus-core.workspace = true
nexus-index.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde_json.workspace = true
clap.workspace = true
notify-debouncer-mini.workspace = true
